--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha ./test/test.js"
+    "test": "mocha ./tests/test.js"
   },
   "keywords": [],
   "author": "",
