--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,5 +24,15 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
-    - run: npm start
+    - name: Run tests
+      run: npm test
+      env:
+        OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
+        PORT: ${{ secrets.PORT }}
+        NODE_ENV: ${{ secrets.NODE_ENV }}
+    - name: Start application
+      run: npm start
+      env:
+        OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
+        PORT: ${{ secrets.PORT }}
+        NODE_ENV: ${{ secrets.NODE_ENV }}
