--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,9 @@
 {
   "name": "rexgt-frontend",
-  "version": "0.2.0",
+  "version": "0.4.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,8 +12,7 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.5",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^10.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
